# ui5-yew-todo

./: .gitignore  Cargo.toml  README.md  index.html
dist-assets/: ui5-yew-todo-c32797535e81b1f1.js
dist-sample/: index.html  ui5-yew-todo-c32797535e81b1f1_bg.wasm
src/: main.rs
src/additem/: additem.rs  item_struct.rs
src/table/: table.rs
