[package]
name = "ui5-yew-todo"
version = "0.1.0"
edition = "2021"

[dependencies]
yew = { git = "https://github.com/yewstack/yew/", features = ["csr"] }
gloo = "0.8.0"
wasm-bindgen = "0.2.83"

[dependencies.web-sys]
version = "0.3"
features = [
    "console",
    "HtmlElement",
    "HtmlInputElement",
    "MouseEvent",
    "InputEvent"
]
